--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -36,7 +36,7 @@
                                                     <div class="modal_img">
                                                         <a href="#"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a>
                                                         <div class="img_icone">
-                                                           <img th:src="@{|/assets/img/product/${product.image}|}" alt="">
+                                                           <img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt="">
                                                        </div>
                                              <!--             <div class="view_img">
                                                             <a class="large_view" src="/assets/img/product/${product.image}" ><i class="fa fa-search-plus"></i></a>
