Đây là khảo nghiệm ông trời dành cho Khoa sao

--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -41,6 +41,7 @@
             <li><a th:href="@{/admin/report/revenueByCustomer}"><i class="fa fa-circle-o"></i> Doanh thu theo khách hàng</a></li>
             <li><a th:href="@{/admin/report/revenueByCategories}"><i class="fa fa-circle-o"></i> Doanh thu theo loại</a></li>
              <li><a th:href="@{/admin/report/popularProduct}"><i class="fa fa-circle-o"></i>Sản phẩm bán chạy</a></li>
+             <li><a th:href="@{/admin/report/reportRevenueByProduct}"><i class="fa fa-circle-o"></i>Doanh thu theo sản phẩm</a></li>
           </ul>
         </li>
         
