--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -57,10 +57,10 @@
                                                          
                                                        <td class="product_thumb"><a href="#"><img style="width:25%;" th:src="@{|/imgProducts/${HoLy.image}.png|}"  alt=""></a></td>
                                                         <td class="product_name"> [[${HoLy.name}]]</td>
-                                                        <td class="product-price">[[${HoLy.price}*1]]</td>
+                                                        <td class="product-price"> ₫[[${#numbers.formatDecimal(HoLy.price * 1, 0, 'POINT', 0, 'NONE')}]]</td>
                                                         <td class="product_quanlity">[[${HoLy.quanlity}]]</td>
-                                                        <td class="product_total">[[${HoLy.quanlity * HoLy.price}*1]]</td>
-                                                       
+                                                        <td class="product_total"> ₫[[${#numbers.formatDecimal((HoLy.quanlity * HoLy.price) * 1, 0, 'POINT', 0, 'NONE')}]]</td>
+                                                      
 
                                                     </tr>
                                               
