--- a/Normal_DATN/src/main/resources/templates/nguoiDung/shopFind.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/shopFind.html
@@ -61,7 +61,7 @@
                                      
                                                
                                                     <div class="row">
-                                                        <div th:each="HoLy:${page.content}"  class="col-lg-4 col-md-6">
+                                                        <div th:each="HoLy:${shopFindPage.content}"  class="col-lg-4 col-md-6">
                                                             <div class="single_product">
                                                                 <div class="product_thumb">
                                                                    <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
@@ -96,31 +96,33 @@
                                         <!--shop tab product end-->
                       <div class="pro-pagination">
                  
-                                               <nav aria-label="Page navigation example">
-                      <ul class="pagination justify-content-center">
-                  
-                  <li class="page-item"><a class="page-link" th:href="@{|/shop/find?p=0|}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-bar-left" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M11.854 3.646a.5.5 0 0 1 0 .708L8.207 8l3.647 3.646a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708 0zM4.5 1a.5.5 0 0 0-.5.5v13a.5.5 0 0 0 1 0v-13a.5.5 0 0 0-.5-.5z"/>
-</svg></a></li>
-                  <li class="page-item"><a class="page-link" th:href="@{|/shop/find?p=${page.number-1 < 0 ? 0:page.number-1}|}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-  <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-</svg></a></li>
-                  <li class="page-item"><a class="page-link" th:href="@{|/shop/find?p=${page.number+1 > page.totalPages - 1 ? page.totalPages - 1: page.number+1}|}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
-  <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
-</svg></a></li>
-                  <li class="page-item"><a class="page-link" th:href="@{|/shop/find?p=${page.totalPages-1}|}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-bar-right" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M4.146 3.646a.5.5 0 0 0 0 .708L7.793 8l-3.647 3.646a.5.5 0 0 0 .708.708l4-4a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708 0zM11.5 1a.5.5 0 0 1 .5.5v13a.5.5 0 0 1-1 0v-13a.5.5 0 0 1 .5-.5z"/>
-</svg></a></li>
-
-
-
-                </ul>
-              </nav>   
+                        <nav aria-label="Page navigation example" 
+                        th:if="${shopFindPage.totalPages >0}">
+                    <ul class="pagination justify-content-center">
+                
+                      <li th:class="${1== shopFindPage.number + 1} ? 'page-item disabled ' : 'page-item'">
+                  <a  th:href="@{|/shop/find?s=${shopFindPage.size}&p =0|}" class="page-link">First</a>
+                </li>
+              
+             
+                <li class="page-item active"
+                th:each="pageNumber :${pageNumbers}" 
+                th:if="${shopFindPage.totalPages > 1}"
+                th:class="${pageNumber == shopFindPage.number + 1} ? 'page-item active' : 'page-item'">
+                <a  th:href="@{|/shop/find?s=${shopFindPage.size}&p=${pageNumber-1}|}" 
+                class="page-link"
+                th:text="${pageNumber}"></a>
+                </li>
+      
+                <li th:class="${shopFindPage.totalPages == shopFindPage.number + 1} ? 'page-item disabled ' : 'page-item'">
+                  <a  th:href="@{|/shop/find?s=${shopFindPage.size}&p=${shopFindPage.totalPages-1}|}" class="page-link">Last</a>
+                </li>
+                      
+                    </ul>
+                  </nav>
                                         
                                     <div class="product-pagination">
-                                        <span class="grid-item-list">Trang  [[${page.number+1}]]/[[${page.totalPages}]]([[${page.totalElements}]] Sản phẩm)</span>
+                                        <span class="grid-item-list">Trang  [[${shopFindPage.number+1}]]/[[${shopFindPage.totalPages}]]([[${shopFindPage.totalElements}]] Sản phẩm)</span>
                                     </div>
                                 </div>
                                         <!--pagination style start--> 
