--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -147,7 +147,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="product_active owl-carousel">
-                                                <div th:each="HoLy:${spbanchay}"  class="col-lg-3">
+                                                <div th:each="HoLy:${item}"  class="col-lg-3">
                                              
                                                     <div class="single_product">
                                                         <div class="product_thumb">
