--- a/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/aside.html
@@ -42,6 +42,9 @@
             <li><a th:href="@{/admin/report/revenueByCategories}"><i class="fa fa-circle-o"></i> Doanh thu theo loại</a></li>
              <li><a th:href="@{/admin/report/popularProduct}"><i class="fa fa-circle-o"></i>Sản phẩm bán chạy</a></li>
              <li><a th:href="@{/admin/report/reportRevenueByProduct}"><i class="fa fa-circle-o"></i>Doanh thu theo sản phẩm</a></li>
+             <li><a th:href="@{/admin/report/reportRevenueByYears}"><i class="fa fa-circle-o"></i>Doanh thu theo năm</a></li>
+             <li><a th:href="@{/admin/report/reportRevenueByQuarter}"><i class="fa fa-circle-o"></i>Doanh thu theo quý</a></li>
+             <li><a th:href="@{/admin/report/reportRevenueByMonth}"><i class="fa fa-circle-o"></i>Doanh thu theo tháng</a></li>
           </ul>
         </li>
         
