--- a/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
@@ -3,83 +3,105 @@
 	xmlns:th="http://www.thymeleaf.org"
 	layout:decorate="~{Admin/components/header}">
 <body>
-<div layout:fragment ="contentChanges">
-	<section class="content">
-		<div class="row">
-			<div class="col-md-12">
-          <!-- general form elements -->
-          <div class="box box-primary">
-            <div class="box-header with-border">
-              <h3 class="box-title">Order Detail</h3>
-            </div>
-            <!-- /.box-header -->
-            <!-- form start -->
-            
-     
-           
-          </div>
-  		<div class="box">
-            <div class="box-header">
-            
-               <h3 style="float:right;" class="box-title">
-       
+	<div layout:fragment="contentChanges">
+		<section class="content">
+			<div class="row">
+				<div class="col-md-12">
+					<!-- general form elements -->
+					<div class="box box-primary">
+						<div class="box-header with-border">
+							<h3 class="box-title">Order Detail</h3>
+						</div>
+						<!-- /.box-header -->
+						<!-- form start -->
 
-              </h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-              <div class="row"><div class="col-sm-6">
-              </div><div class="col-sm-6">
-              </div></div>
-              <div class="row"><div class="col-sm-12">
-      
-              <table id="example" class="table table-bordered table-hover dataTable" width="100%" data-page-length="25" data-order="[[ 1, &quot;asc&quot; ]]">
-                <thead>
-                 <tr role="row">
-                 <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Mã Hóa Đơn</th>
-      
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Tên sản phẩm</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Giá sản phẩm</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Số lượng sản phẩm</th>
-                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Thành tiền</th>
 
-                 </tr>
-                
-                </thead>
-                <tbody>
-                
-                
-                <tr th:each="HoLy:${item}" role="row" class="odd">
-                 <td class="sorting_1"><img style="height: 200px; width: 200px" th:src="@{|/historyBuy/${HoLy.image}.png|}" alt=""></td>
-                   <td class="sorting_1">[[${HoLy.name}]]</td>
-                  <td class="sorting_1">[[${#numbers.formatDecimal(HoLy.price *1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
-                  <td class="sorting_1">[[${#numbers.formatDecimal(HoLy.quanlity, 0, 'POINT', 0, 'NONE')}]]</td>
-                 <td class="sorting_1">[[${#numbers.formatDecimal((HoLy.quanlity * HoLy.price) * 1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
-                 
-           
-                  
-                   
-                  
-                </tr>
-               </tbody>
-               
-              </table>
-              </div>
-              </div>
-                    <div class="row">
-              <div class="col-sm-5">
-             
-              </div>
-              
-              </div>
-              </div>
-            </div>
-            <!-- /.box-body -->
-          </div>
-        </div>
-		</div>
-	</section>
-</div>
+
+					</div>
+					<div class="box">
+						<div class="box-header">
+
+							<h3 style="float: right;" class="box-title"></h3>
+						</div>
+						<!-- /.box-header -->
+						<div class="box-body">
+							<div id="example2_wrapper"
+								class="dataTables_wrapper form-inline dt-bootstrap">
+								<div class="row">
+									<div class="col-sm-6"></div>
+									<div class="col-sm-6"></div>
+								</div>
+								<div class="row">
+									<div class="col-sm-12">
+
+										<table id="example"
+											class="table table-bordered table-hover dataTable"
+											width="100%" data-page-length="25"
+											data-order="[[ 1, &quot;asc&quot; ]]">
+											<thead>
+												<tr role="row">
+													<th class="sorting_asc" tabindex="0"
+														aria-controls="example2" rowspan="1" colspan="1"
+														aria-sort="ascending"
+														aria-label="Rendering engine: activate to sort column descending">Mã
+														Hóa Đơn</th>
+
+													<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="CSS grade: activate to sort column ascending">Tên
+														sản phẩm</th>
+													<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="CSS grade: activate to sort column ascending">Giá
+														sản phẩm</th>
+													<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="CSS grade: activate to sort column ascending">Số
+														lượng sản phẩm</th>
+													<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="CSS grade: activate to sort column ascending">Thành
+														tiền</th>
+
+												</tr>
+
+											</thead>
+											<tbody>
+
+
+												<tr th:each="HoLy:${item}" role="row" class="odd">
+													<td class="sorting_1"><img
+														style="height: 200px; width: 200px"
+														th:src="@{|/historyBuy/${HoLy.image}.png|}" alt=""></td>
+													<td class="sorting_1">[[${HoLy.name}]]</td>
+													<td class="sorting_1">[[${#numbers.formatDecimal(HoLy.price
+														*1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
+													<td class="sorting_1">[[${#numbers.formatDecimal(HoLy.quanlity,
+														0, 'POINT', 0, 'NONE')}]]</td>
+													<td class="sorting_1">[[${#numbers.formatDecimal((HoLy.quanlity
+														* HoLy.price) * 1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
+
+
+
+
+
+												</tr>
+											</tbody>
+
+										</table>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-5"></div>
+
+								</div>
+							</div>
+						</div>
+						<!-- /.box-body -->
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
