--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -134,105 +134,50 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="block_title">
-                                    <h3>  11 other products category:</h3>
+                                    <h3>  5 other products category:</h3>
                                 </div>
                                 </div> 
                             </div>
                             <div class="row">
                                 <div class="single_p_active owl-carousel">
-                                   
+                                   <div  th:each="sp:${SPLienQuan}">
                                     <div class="col-lg-3">
                                         <div class="single_product">
                                             <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product2.jpg" alt=""></a> 
+                                               <a th:href="@{|/singleProduct/${sp.id}|}"><img th:src="@{|/imgProducts/${sp.image}.png|}" alt=""></a> 
                                                <div class="hot_img">
-                                                   <img src="assets\img\cart\span-hot.png" alt="">
+                                                   <img src="\assets\img\cart\span-hot.png" alt="">
                                                </div>
                                                <div class="product_action">
                                                    <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
                                                </div>
+                                               <div th:if="${sp.available} != true">
+							                      <div class="product_action">
+                                                               <a onclick="alert('Xin lỗi! Sản phẩm đã hết hàng.')" href="#"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
+                                                           </div>
+							                        </div>
+													                <div th:if="${sp.available} == true">
+												 <div class="product_action">
+                                                               <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${sp.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
+                                                           </div>
+												           
+           																		     </div> 
                                             </div>
                                             <div class="product_content">
-                                                <span class="product_price">$40.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Quisque ornare dui</a></h3>
+                                                <span class="product_price">[[${#numbers.formatDecimal(sp.price, 0, 'POINT', 0, 'NONE')}]]đ</span>
+                                                <h3 class="product_title"><a  th:href="@{|/singleProduct/${sp.id}|}">[[${sp.name}]]</a></h3>
                                             </div>
                                             <div class="product_info">
                                                 <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
+                                                    <li><a  th:href="@{|/singleProduct/${sp.id}|}" data-toggle="modal" data-target="#modal_box" title="Quick view">Xem chi tiết</a></li>
+                                                    
                                                 </ul>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product3.jpg" alt=""></a> 
-                                               <div class="img_icone">
-                                                   <img src="assets\img\cart\span-new.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$60.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Sed non turpiss</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product4.jpg" alt=""></a> 
-                                               <div class="hot_img">
-                                                   <img src="assets\img\cart\span-hot.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$65.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Duis convallis</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product6.jpg" alt=""></a> 
-                                               <div class="img_icone">
-                                                   <img src="assets\img\cart\span-new.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$50.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Curabitur sodales</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
+                                </div>
+                                  
                                 </div> 
                             </div>      
                         </div> 
@@ -240,7 +185,7 @@
 
 
                         <!--new product area start-->
-                        <div class="new_product_area product_page">
+                        <!-- <div class="new_product_area product_page">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="block_title">
@@ -273,101 +218,13 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product5.jpg" alt=""></a> 
-                                               <div class="hot_img">
-                                                   <img src="assets\img\cart\span-hot.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$40.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Quisque ornare dui</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product4.jpg" alt=""></a> 
-                                               <div class="img_icone">
-                                                   <img src="assets\img\cart\span-new.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$60.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Sed non turpiss</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product3.jpg" alt=""></a> 
-                                               <div class="hot_img">
-                                                   <img src="assets\img\cart\span-hot.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$65.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Duis convallis</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <div class="single_product">
-                                            <div class="product_thumb">
-                                               <a href="single-product.html"><img src="assets\img\product\product2.jpg" alt=""></a> 
-                                               <div class="img_icone">
-                                                   <img src="assets\img\cart\span-new.png" alt="">
-                                               </div>
-                                               <div class="product_action">
-                                                   <a href="#"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
-                                               </div>
-                                            </div>
-                                            <div class="product_content">
-                                                <span class="product_price">$50.00</span>
-                                                <h3 class="product_title"><a href="single-product.html">Curabitur sodales</a></h3>
-                                            </div>
-                                            <div class="product_info">
-                                                <ul>
-                                                    <li><a href="#" title=" Add to Wishlist ">Add to Wishlist</a></li>
-                                                    <li><a href="#" data-toggle="modal" data-target="#modal_box" title="Quick view">View Detail</a></li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
+                                   
+                                    
+                                   
+                                   
                                 </div> 
                             </div>      
-                        </div> 
+                        </div>  -->
                         <!--new product area start-->  
 
                     </div>
