--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -474,12 +474,15 @@
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="footer_widget">
                                     <h3>About us</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p>Chuyên cung cấp sản phẩm đồng hồ chính hãng của các thương hiệu nổi tiếng Nga,
+                                         Thụy Sĩ như: Đồng hồ Casio, Rolex,Orient,
+                                         CitiZen, các loại đồng hồ bằng vàng khối 100% chính hãng,
+                                           khách hàng thoải mái lựa chọn những sản phẩm có mức giá phù hợp. </p>
                                     <div class="footer_widget_contect">
-                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>  19 Interpro Road Madison, AL 35758, USA</p>
+                                        <p><i class="fa fa-map-marker" aria-hidden="true"></i>Số 288, Nguyễn Văn Linh, phường An Khánh, quận Ninh Kiều, Tp. Cần Thơ.</p>
 
-                                        <p><i class="fa fa-mobile" aria-hidden="true"></i> (012) 234 432 3568</p>
-                                        <a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i> Contact@plazathemes.com </a>
+                                        <p><i class="fa fa-mobile" aria-hidden="true"></i>(0292) 7300 468</p>
+                                        <a href="/ContactUs"><i class="fa fa-envelope-o" aria-hidden="true"></i> trungttpc01815@fpt.edu.vn </a>
                                     </div>
                                 </div>
                             </div>
@@ -487,11 +490,10 @@
                                 <div class="footer_widget">
                                     <h3>My Account</h3>
                                     <ul>
-                                        <li><a href="#">Your Account</a></li>
-                                        <li><a href="#">My orders</a></li>
-                                        <li><a href="#">My credit slips</a></li>
-                                        <li><a href="#">My addresses</a></li>
-                                        <li><a href="#">Login</a></li>
+                                        <li><a href="/orderHistory">My Account</a></li>
+                                        <li><a href="/orderHistory">My orders</a></li>
+                                        <li><a href="https://goo.gl/maps/HX6f6TsX37kV1YXR8">My addresses</a></li>
+                                        <li><a href="/login">Login</a></li>
                                     </ul>
                                 </div>
                             </div>
