--- a/Normal_DATN/src/main/resources/templates/taiKhoan/login.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/login.html
@@ -30,7 +30,7 @@
 						<input type="text"   name="username" placeholder="Tên đăng nhập"/>
 					<input type="password"   name="password" placeholder="Mật khẩu"/>
 						<div class="remember">
-			           <a style="color:white;" href="/index"><< Trang chủ</a>
+			           <a style="color:white;" href="/index">Trang chủ</a>
 						 <div class="forgot">
 						 
 						 
