--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -194,7 +194,7 @@
                                     <!--banner area start-->
                                     <div class="banner_area mb-60">
                                         <div class="row">
-                                            <div class="col-lg-6 col-md-6">
+                                            <!-- <div class="col-lg-6 col-md-6">
                                                 <div class="single_banner">
                                                     <a href="#"><img src="assets\img\banner\banner7.jpg" alt=""></a>
                                                     <div class="banner_title">
@@ -209,7 +209,7 @@
                                                         <p>sale off <span> 30%</span></p>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>     
                                     <!--banner area end--> 
