--- a/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
+++ b/Normal_DATN/src/main/resources/templates/taiKhoan/MaOTP.html
@@ -32,6 +32,7 @@
 						
 					   
 	<input type="submit" value="Gửi">
+	<a style="color:white;" href="/login">Đăng nhập</a>
   </form>	
 				</div>
 				</div>
